--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -15,7 +15,13 @@ author_profile: true
   {% include archive-single-talk.html %}
 {% endfor %}-->
 
-Bouté E., Lupovici, R. (2023). « Les images de la contestation connectée des Gilets jaunes au croisement des terrains et des méthodes », Colloque Plateformes et usages, Université de Montréal. 2-3-4 Novembre 2023.
+## 2023
+
+* Bouté E., Lupovici, R. « Les images de la contestation connectée des Gilets jaunes au croisement des terrains et des méthodes », *Colloque Plateformes et usages*, Université de Montréal. 2-3-4 Novembre 2023.
+
+## 2022
+
+
 Bouté E. (2022). « Les réseaux de la tempête qui s’annonce. Quel rôle a joué Facebook dans la structuration du mouvement des Gilets jaunes entre janvier et novembre 2018 ? », Journées d’études : Les Gilets jaunes trois ans après – Un état des lieux. ENS Ulm, Paris.  2-3 juin 2022.
 Bouté E. (2019) « Pratiques de dénonciation de la répression policière des Gilets Jaunes sur les réseaux sociaux numériques », demi-journée d’études : Les Gilets Jaunes en politique. Sciences Po, Paris. 28 novembre 2019.
 Bouté E., Mabi C. (2019). « L’influence des technologies numériques dans l’injonction à la transparence parlementaire », journée d’études interdisciplinaires : Médias, discours et transparence. IUT de Tours. 4 avril 2019.
