--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -16,23 +16,26 @@ author_profile: true
 {% endfor %}-->
 
 ## 2023
-
+* Alié, F., Bouté, E., Julliard, V. « Appréhender de grands corpus de vidéo : captures d’écran, tri et exploration avec Pellipop et Panoptic », *Journée d’études : Travailler avec les images en mouvement*, Maison de la Recherche de Sorbonne Université, Paris. 21 décembre 2023.
+* Alié, F., Bouté, E., Écrement V. « Génèse, création et fonctionnement de l’outil de visualisation Panoptic », *Séminaire MetSem*, Sciences Po Paris. 23 Novembre 2023.
 * Bouté E., Lupovici, R. « Les images de la contestation connectée des Gilets jaunes au croisement des terrains et des méthodes », *Colloque Plateformes et usages*, Université de Montréal. 2-3-4 Novembre 2023.
+* Bouté E. « Le mouvement des Gilets jaunes à l’épreuve des plateformes », *23ème Congrès de la SFSIC* (table ronde). Bordeaux. 14-15-16 juin 2023.
+* Bouté E., Julliard V., « Enjeux de tri et d’exploration de vastes corpus d’images fixes et vidéos collectées sur Twitter », *Journée d’études : Travailler avec les images*. Maison de la Recherche de Sorbonne Université, Paris. 8 juin 2023.
+* Bouté E., Mabi C. « Game of Pol : la participation politique sur Twitch à l’épreuve des logiques de plateformisation du web », *Journée d’études : La politique sur Twitch*. Site Pouchet du CNRS, Paris. 14 avril 2023.
+Bouté E. « Les réseaux de la tempête qui s’annonce. Quel rôle a joué Facebook dans la structuration du mouvement des Gilets jaunes entre janvier et novembre 2018 ? », *séminaire COMUN*. Université Toulouse 1 Capitole. 10 mars 2023
 
 ## 2022
+* Bouté E. « Les réseaux de la tempête qui s’annonce. Quel rôle a joué Facebook dans la structuration du mouvement des Gilets jaunes entre janvier et novembre 2018 ? », *Journées d’études : Les Gilets jaunes trois ans après – Un état des lieux*. ENS Ulm, Paris. 2-3 juin 2022.
 
 
-Bouté E. (2022). « Les réseaux de la tempête qui s’annonce. Quel rôle a joué Facebook dans la structuration du mouvement des Gilets jaunes entre janvier et novembre 2018 ? », Journées d’études : Les Gilets jaunes trois ans après – Un état des lieux. ENS Ulm, Paris.  2-3 juin 2022.
-Bouté E. (2019) « Pratiques de dénonciation de la répression policière des Gilets Jaunes sur les réseaux sociaux numériques », demi-journée d’études : Les Gilets Jaunes en politique. Sciences Po, Paris. 28 novembre 2019.
-Bouté E., Mabi C. (2019). « L’influence des technologies numériques dans l’injonction à la transparence parlementaire », journée d’études interdisciplinaires : Médias, discours et transparence. IUT de Tours. 4 avril 2019.
 
 
-Alié, F., Bouté, E., Julliard, V. (2023). « Appréhender de grands corpus de vidéo : captures d’écran, tri et exploration avec Pellipop et Panoptic », Journée d’études « Travailler avec les images en mouvement », Maison de la Recherche de Sorbonne Université, Paris. 21 décembre 2023.
-Alié, F., Bouté, E., Écrement V. (2023). « Génèse, création et fonctionnement de l’outil de visualisation Panoptic », Séminaire MetSem, Sciences Po Paris. 23 Novembre 2023.
-Bouté E. (2023). « Le mouvement des Gilets jaunes à l’épreuve des plateformes », 23ème Congrès de la SFSIC (table ronde). Bordeaux. 14-15-16 juin 2023.
-Bouté E., Julliard V., « Enjeux de tri et d’exploration de vastes corpus d’images fixes et vidéos collectées sur Twitter », journée d’études : Travailler avec les images. Maison de la Recherche de Sorbonne Université, Paris. 8 juin 2023.
-Bouté E., Mabi C. (2023). « Game of Pol : la participation politique sur Twitch à l’épreuve des logiques de plateformisation du web », journée d’études : La politique sur Twitch. Site Pouchet du CNRS, Paris. 14 avril 2023.
-Bouté E. (2023). « Les réseaux de la tempête qui s’annonce. Quel rôle a joué Facebook dans la structuration du mouvement des Gilets jaunes entre janvier et novembre 2018 ? », séminaire COMUN. Université Toulouse 1 Capitole. 10 mars 2023
+
+## 2019
+* Bouté E. « Pratiques de dénonciation de la répression policière des Gilets Jaunes sur les réseaux sociaux numériques », *Demi-journée d’études : Les Gilets Jaunes en politique*. Sciences Po, Paris. 28 novembre 2019.
+* Bouté E., Mabi C. « L’influence des technologies numériques dans l’injonction à la transparence parlementaire », *Journée d’études interdisciplinaires : Médias, discours et transparence*. IUT de Tours. 4 avril 2019.
+
+
 Bouté E. (2022). Participation au panel « Plateformes et mobilisations collectives », Journées annuelles du CIS. Site Pouchet du CNRS, Paris. 5 décembre 2022.
 Bouté E., Alié F. (2022). Participation au panel « Méthodes numériques et interdisciplinarité », Journées annuelles du CIS. Site Pouchet du CNRS, Paris. 5 décembre 2022.
 Bouté E., Mabi C. (2022). « La participation politique en ligne face à la plateformisation du web », séminaire POIETIC. Université Côte d’Azur, Nice. 7 avril 2022.
