--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,9 +4,15 @@ title: "Enseignements"
 permalink: /teaching/
 author_profile: true
 ---
-
+<!--
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+-->
+
+# Sciences Po Paris
+## Sciences Po Paris
+======
+
